--- a/index.css
+++ b/index.css
@@ -6,25 +6,25 @@ body {
   #main-header {
     display: flex;
     justify-content: center;
-    background: #515DA2;
+    background: #3b56f2;
     opacity: .8;
-    height: 7rem;
+    height: 4rem;
     padding: 1rem;
   }
   
-  #toy-collection {
+  #crypto-collection {
     margin: 2rem;
   }
   
   .card {
     text-align: center;
-    border: grey solid 1px;
+    border: rgb(224, 22, 22) solid 1px;
     padding: 1rem;
     width: 15rem;
-    height: 25rem;
+    height: 20rem;
     display: inline-grid;
     margin: 1rem 2rem;
-    box-shadow: 3px 4px #e04b52
+    box-shadow: 3px 4px #3b56f2
   }
   
   .toy-avatar {
@@ -35,7 +35,7 @@ body {
   
   button {
     position: relative;
-    background-color: #e04b52;
+    background-color: #3b56f2;
     border: none;
     border-radius: 5px;
     height: 3rem;
