--- a/index.css
+++ b/index.css
@@ -6,10 +6,11 @@ body {
   #main-header {
     display: flex;
     justify-content: center;
-    background: #3b56f2;
+    background: #7487f4;
     opacity: .8;
-    height: 4rem;
+    height: 3rem;
     padding: 1rem;
+    
   }
   
   #crypto-collection {
@@ -74,13 +75,7 @@ body {
     color: #e04b52;
   }
  
-  
-  
-  .input-text {
-    border-radius: 5px;
-    height: 2rem;
-    width: 60%;
-    font-size: 18px;
-    font-family: monospace;
-    margin: 3px;
-  }
+.comment-list {
+  color: #3b56f2;
+  text-align: left;
+}
