mostly completed. Need to figure out how to do the heart

--- a/index.css
+++ b/index.css
@@ -6,7 +6,8 @@ body {
   #main-header {
     display: flex;
     justify-content: center;
-    background: #7487f4;
+    background: #0323d4;
+    color: whitesmoke;
     opacity: .8;
     height: 3rem;
     padding: 1rem;
@@ -14,15 +15,15 @@ body {
   }
   
   #crypto-collection {
-    margin: 2rem;
+    margin: 5rem;
   }
   
   .card {
     text-align: center;
-    border: rgb(224, 22, 22) solid 1px;
+    border: rgb(224, 22, 22) solid 2px;
     padding: 1rem;
     width: 15rem;
-    height: 20rem;
+    height: 25rem;
     display: inline-grid;
     margin: 1rem 2rem;
     box-shadow: 3px 4px #3b56f2
@@ -47,14 +48,6 @@ body {
     color: #e04b52;
   }
   
-  .container {
-    padding: 1rem;
-    width: stretch;
-    height: auto;
-    display: none;
-    background: #515DA2;
-    opacity: .8;
-  }
   
   .submit {
     position: relative;
