--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body {
   #main-header {
     display: flex;
     justify-content: center;
-    background: #0323d4;
+    background: #5b6ac0;
     color: whitesmoke;
     opacity: .8;
     height: 3rem;
@@ -25,8 +25,9 @@ body {
     width: 15rem;
     height: 25rem;
     display: inline-grid;
+
     margin: 1rem 2rem;
-    box-shadow: 3px 4px #3b56f2
+    box-shadow: 8px 11px #3b56f2
   }
   
   
