--- a/index.css
+++ b/index.css
@@ -14,6 +14,16 @@ body {
     
   }
   
+  #search-box{
+    display: flex;
+    justify-content: center;
+    background: #c05b63;
+    color: whitesmoke;
+    opacity: .8;
+    height: 10rem;
+    padding: 1rem;
+  }
+
   #crypto-collection {
     margin: 5rem;
   }
@@ -32,6 +42,18 @@ body {
   
   
   button {
+    position: relative;
+    background-color: #3b56f2;
+    border: none;
+    border-radius: 5px;
+    height: 3rem;
+    width: max-content;
+    color: whitesmoke;
+    font-size: 18px;
+    justify-self: center;
+  }
+
+  #crypto-submit {
     position: relative;
     background-color: #3b56f2;
     border: none;
