nearly finished search box functionality based on ticker. As well, finished the Reset button functionality to bring the page back to the first 6 cryptos without having to reload or refresh the page

--- a/index.css
+++ b/index.css
@@ -53,7 +53,7 @@ body {
     justify-self: center;
   }
 
-  #crypto-submit {
+  #crypto-submit, #reset-submit {
     position: relative;
     background-color: #3b56f2;
     border: none;
